--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -221,9 +221,10 @@
                     <li class="nav-item dropdown {{if .IsMorePage }}active{{end}}">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="/experience">Experience Table</a>
-                            <a class="dropdown-item" href="/achievements">Achievements Search</a>
                             <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
+                            <a class="dropdown-item" href="/achievements">Achievements Search</a>
+                            <a class="dropdown-item" href="/experience">Experience Table</a>
+                            <a class="dropdown-item" href="/queues">Queues</a>
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
 
