Show webhook hash

--- a/cmd/frontend/templates/admin/webhooks.gohtml
+++ b/cmd/frontend/templates/admin/webhooks.gohtml
@@ -16,6 +16,7 @@
                             <th scope="col">Date</th>
                             <th scope="col">Service</th>
                             <th scope="col">Event</th>
+                            <th scope="col">Hash</th>
                         </tr>
                         </thead>
                         <tbody>
