--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -141,6 +141,10 @@
                                 <a class="dropdown-item" href="/players?country=c-{{ .Key }}">{{ .Value }}</a>
                             {{ end }}
 
+                            <div class="dropdown-divider"></div>
+
+                            <a class="dropdown-item" href="/players/add">Add a Player</a>
+
                         </div>
                     </li>
 
