Update column titles

--- a/cmd/frontend/templates/upcoming.gohtml
+++ b/cmd/frontend/templates/upcoming.gohtml
@@ -39,7 +39,7 @@
                     <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/games/upcoming/upcoming.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">App</th>
+                            <th scope="col">Game</th>
                             <th scope="col">Followers</th>
                             <th scope="col">Type</th>
                             <th scope="col">Date</th>
