--- a/cmd/frontend/templates/apps_achievements.gohtml
+++ b/cmd/frontend/templates/apps_achievements.gohtml
@@ -39,7 +39,7 @@
                     <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/games/achievements/achievements.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">App</th>
+                            <th scope="col">Game</th>
                             <th scope="col">Achievements</th>
                             <th scope="col" nowrap="nowrap">Avg Completion</th>
                             <th scope="col">Price</th>
