--- a/cmd/frontend/templates/new_releases.gohtml
+++ b/cmd/frontend/templates/new_releases.gohtml
@@ -46,7 +46,7 @@
                     <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/games/new-releases/new-releases.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">App</th>
+                            <th scope="col">Game</th>
                             <th scope="col">Price</th>
                             <th scope="col">Score</th>
                             <th scope="col">Players</th>
