--- a/cmd/frontend/templates/trending_apps.gohtml
+++ b/cmd/frontend/templates/trending_apps.gohtml
@@ -19,7 +19,7 @@
                     <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/games/trending/trending.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">App</th>
+                            <th scope="col">Game</th>
                             <th scope="col">Price</th>
                             <th scope="col">Players</th>
                             <th scope="col" nowrap="nowrap">Trend</th>
