--- a/cmd/frontend/templates/wishlists.gohtml
+++ b/cmd/frontend/templates/wishlists.gohtml
@@ -60,7 +60,7 @@
                             <table class="table table-hover table-striped table-counts" data-row-type="games" data-path="/games/wishlists/games.json">
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">App</th>
+                                    <th scope="col">Game</th>
                                     <th scope="col">Wishlists</th>
                                     <th scope="col">Avg Position</th>
                                     <th scope="col">Followers</th>
