Update release dates list

--- a/cmd/frontend/templates/apps_release_dates.gohtml
+++ b/cmd/frontend/templates/apps_release_dates.gohtml
@@ -43,6 +43,7 @@
                             <th scope="col">Release Date</th>
                             <th scope="col">Followers</th>
                             <th scope="col"></th>
+                            <th scope="col">Score</th> {{/* Search Score */}}
                         </tr>
                         </thead>
                         <tbody>
