--- a/cmd/frontend/templates/stat.gohtml
+++ b/cmd/frontend/templates/stat.gohtml
@@ -16,6 +16,7 @@
         {{ template "flashes" . }}
 
         <div class="card">
+            {{ template "stats_header" . }}
             <div class="card-body">
 
                 <div class="card mb-4">
