Fix input background colour

--- a/cmd/frontend/assets/sass/_settings.scss
+++ b/cmd/frontend/assets/sass/_settings.scss
@@ -10,7 +10,7 @@
         div.progress {
             margin-top: -38px;
             height: 38px;
-            background: #fff;
+            background: transparent;
         }
 
         .password-verdict {
