--- a/cmd/frontend/templates/admin/webhooks.gohtml
+++ b/cmd/frontend/templates/admin/webhooks.gohtml
@@ -9,6 +9,19 @@
             {{ template "admin_header" . }}
             <div class="card-body">
 
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="form-group">
+                            <label for="service">Service</label>
+                            <select data-placeholder="Choose Services" class="form-control form-control-chosen" id="service" name="service" multiple>
+                                {{ range .Services }}
+                                    <option value="{{ . }}">{{ .ToString }}</option>
+                                {{ end }}
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="table-responsive">
                     <table class="table table-hover table-striped table-counts" data-row-type="users" data-path="/admin/webhooks.json">
                         <thead class="thead-light">
