Add confirmation to reset api key

--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -123,9 +123,9 @@
 
                                         <p>API key: {{ .User.APIKey }}</p>
 
-                                        <a href="/settings/new-key" role="button" class="btn btn-warning btn-sm">
+                                        <div role="button" class="btn btn-warning btn-sm cursor-pointer" id="reset-api-key-btn">
                                             <i class="fas fa-retweet"></i> Generate new key
-                                        </a>
+                                        </div>
 
                                     </div>
                                 </div>
