--- a/cmd/frontend/assets/sass/bootstrap/_type.scss
+++ b/cmd/frontend/assets/sass/bootstrap/_type.scss
@@ -102,12 +102,12 @@ mark,
 //
 
 .list-unstyled {
-    @include list-unstyled;
+    @include list-unstyled();
 }
 
 // Inline turns list items into inline-block
 .list-inline {
-    @include list-unstyled;
+    @include list-unstyled();
 }
 
 .list-inline-item {
