--- a/cmd/frontend/assets/sass/bootstrap/utilities/_text.scss
+++ b/cmd/frontend/assets/sass/bootstrap/utilities/_text.scss
@@ -23,7 +23,7 @@
 }
 
 .text-truncate {
-    @include text-truncate;
+    @include text-truncate();
 }
 
 // Responsive alignment
@@ -91,7 +91,7 @@
 }
 
 @each $color, $value in $theme-colors {
-    @include text-emphasis-variant(".text-#{$color}", $value);
+    @include text-emphasis-variant(".text-#{$color}", $value, true);
 }
 
 .text-body {
@@ -121,8 +121,8 @@
 }
 
 .text-break {
-    word-break: break-word !important; // IE & < Edge 18
-    overflow-wrap: break-word !important;
+    word-break: break-word !important; // Deprecated, but avoids issues with flex containers
+    word-wrap: break-word !important; // Used instead of `overflow-wrap` for IE & Edge Legacy
 }
 
 // Reset
