--- a/cmd/frontend/assets/sass/_player.scss
+++ b/cmd/frontend/assets/sass/_player.scss
@@ -45,6 +45,11 @@
 
     #details {
 
+        #aliases {
+            max-height: 140px;
+            overflow: auto;
+        }
+
         #patreon {
             width: 100%;
             @extend .mb-2;
