--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -90,7 +90,7 @@
                                             <table class="table table-no-border mb-0">
                                                 <tr data-link-tab="stats">
                                                     <th scope="row">Value</th>
-                                                    <td nowrap="nowrap" colspan="2">
+                                                    <td nowrap="nowrap" colspan="2" class="p-2">
                                                         {{ if gt .Player.GameStats.All.Count 0 }}
                                                             <h4 class="text-danger mb-0">{{ .Player.GameStats.All.GetTotalPrice }}</h4>
                                                         {{ else }}
