--- a/cmd/frontend/helpers/email/templates/_footer.gohtml
+++ b/cmd/frontend/helpers/email/templates/_footer.gohtml
@@ -1,8 +1,7 @@
 {{define "footer"}}
 
-    <br>
     <p>Thanks, Jleagle.</p>
     <br>
-    <p>From IP: {{ .IP }}</p>
+    <p><small>Send from IP: {{ .IP }}</small></p>
 
 {{end}}
