--- a/cmd/frontend/helpers/email/templates/_header.gohtml
+++ b/cmd/frontend/helpers/email/templates/_header.gohtml
@@ -1,8 +1,8 @@
 {{define "header"}}
 
-    <img src="https://gamedb.online/assets/img/sa-500x500.png" alt="Game DB" height="50">
-
-    <h1>Game DB</h1>
-    <br>
+    <h2>
+        <img src="https://gamedb.online/assets/img/sa-500x500.png" alt="Game DB" style="height: 30px; vertical-align: middle;">
+        Game DB
+    </h2>
 
 {{end}}
