--- a/cmd/frontend/helpers/email/templates/forgot1.gohtml
+++ b/cmd/frontend/helpers/email/templates/forgot1.gohtml
@@ -1,8 +1,8 @@
-{{define "reset"}}
+{{define "forgot1"}}
     {{ template "header" . }}
 
     <p>You or someone else has requested a new password for Game DB</p>
-    <p>If this was not you, please ignore this email.</p>
+    <p><strong>If this was not you, please ignore this email.</strong></p>
     <p>Click the following link to reset your password: {{ .Domain }}/forgot/reset?code={{ .Code }}</p>
 
     {{ template "footer" . }}
