--- a/cmd/frontend/helpers/email/templates/signup.gohtml
+++ b/cmd/frontend/helpers/email/templates/signup.gohtml
@@ -2,7 +2,13 @@
     {{ template "header" . }}
 
     <p>Welcome to Game DB</p>
-    <p>Socials etc</p>
+    <p>Please check out the following:</p>
+    <ul>
+        <li><a href="https://twitter.com/gamedb_online">Twitter</a></li>
+        <li><a href="https://gamedb.online/discord-server">Discord</a></li>
+        <li><a href="https://www.patreon.com/jleagle">Patreon</a></li>
+        <li><a href="https://github.com/gamedb">GitHub</a></li>
+    </ul>
 
     {{ template "footer" . }}
 {{end}}
