--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -700,7 +700,7 @@
                         </div>
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-path="/games/{{ .App.ID }}/achievements.json" data-row-type="players" id="achievements-table">
+                            <table class="table table-hover table-striped table-counts mb-0" data-path="/games/{{ .App.ID }}/achievements.json" data-row-type="achievements" id="achievements-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Achievement</th>
