Finish updating templates

--- a/cmd/frontend/templates/admin/binlogs.gohtml
+++ b/cmd/frontend/templates/admin/binlogs.gohtml
@@ -1,4 +1,4 @@
-{{define "binlogs"}}
+{{define "admin_binlogs"}}
     {{ template "header" . }}
 
     <div class="container" id="admin-binlogs-page">
