--- a/cmd/frontend/templates/admin/consumers.gohtml
+++ b/cmd/frontend/templates/admin/consumers.gohtml
@@ -1,4 +1,4 @@
-{{define "consumers"}}
+{{define "admin_consumers"}}
     {{ template "header" . }}
 
     <div class="container" id="admin-consumers-page">
