--- a/cmd/frontend/templates/admin/settings.gohtml
+++ b/cmd/frontend/templates/admin/settings.gohtml
@@ -1,4 +1,4 @@
-{{define "settings"}}
+{{define "admin_settings"}}
     {{ template "header" . }}
 
     <div class="container" id="admin-settings-page">
