--- a/cmd/frontend/templates/admin/webhooks.gohtml
+++ b/cmd/frontend/templates/admin/webhooks.gohtml
@@ -1,4 +1,4 @@
-{{define "webhooks"}}
+{{define "admin_webhooks"}}
     {{ template "header" . }}
 
     <div class="container" id="admin-webhooks-page">
