--- a/cmd/frontend/templates/admin/websockets.gohtml
+++ b/cmd/frontend/templates/admin/websockets.gohtml
@@ -1,4 +1,4 @@
-{{define "websockets"}}
+{{define "admin_websockets"}}
     {{ template "header" . }}
 
     <div class="container" id="admin-websockets-page">
