--- a/cmd/frontend/helpers/email/templates/_footer.gohtml
+++ b/cmd/frontend/helpers/email/templates/_footer.gohtml
@@ -2,6 +2,6 @@
 
     <p>Thanks, Jleagle.</p>
     <br>
-    <p><small>Send from IP: {{ .IP }}</small></p>
+    <p><small>Sent from IP: {{ .IP }}</small></p>
 
 {{end}}
