Fix signup text

--- a/cmd/frontend/templates/signup.gohtml
+++ b/cmd/frontend/templates/signup.gohtml
@@ -51,7 +51,7 @@
 
                             </div>
                             <div class="col-12 col-lg-6" id="providers">
-                                <p class="mb-2">Or login with:</p>
+                                <p class="mb-2">Or signup with:</p>
                                 {{ range $key, $value := .Providers }}
                                     {{ if .HasEmail }}
                                         <a class="btn btn-lg" href="/oauth/out/{{ .GetEnum }}?page=signup" style="background-color: {{ .GetColour}}; border-color: {{ .GetColour}}"><i class="{{ .GetIcon }}"></i> {{ .GetName }}</a>
