Rename news header links

--- a/cmd/frontend/templates/news.gohtml
+++ b/cmd/frontend/templates/news.gohtml
@@ -15,10 +15,10 @@
 
                 <ul class="nav nav-tabs card-header-tabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#popular" role="tab">Popular Apps</a>
+                        <a class="nav-link active" data-toggle="tab" href="#popular" role="tab">Popular App News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#all" role="tab">All Apps</a>
+                        <a class="nav-link" data-toggle="tab" href="#all" role="tab">All News</a>
                     </li>
                     <li class="nav-item d-none">
                         <a class="nav-link" data-toggle="tab" href="#steam" role="tab">Steam News</a>
