Fix api key style

--- a/cmd/frontend/assets/sass/_settings.scss
+++ b/cmd/frontend/assets/sass/_settings.scss
@@ -25,6 +25,8 @@
         padding: 0;
         border: none;
         width: 300px;
+        background: transparent;
+        color: inherit;
     }
 
     #highlight:focus {
