Update chart footer text

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -696,7 +696,7 @@
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
-                            <small class="card-footer">Data from Game DB players who own the game</small>
+                            <small class="card-footer">Data from Game DB players who have at least one achievement</small>
                         </div>
 
                         <div class="table-responsive">
