--- a/cmd/frontend/templates/dlc.gohtml
+++ b/cmd/frontend/templates/dlc.gohtml
@@ -6,7 +6,7 @@
         <div class="jumbotron">
 
             <h1><i class="fas fa-gamepad"></i> DLC</h1>
-
+            <p class="lead">See what DLC you have left for owned games</p>
         </div>
 
         {{ template "flashes" . }}
