--- a/cmd/frontend/templates/player_missing.gohtml
+++ b/cmd/frontend/templates/player_missing.gohtml
@@ -5,7 +5,7 @@
 
         <div class="jumbotron">
 
-            <h1><i class="fas fa-spinner fa-spin"></i> Looking for player...</h1>
+            <h1><i class="fas fa-user"></i> Looking for player...</h1>
             <p class="lead">This page should refresh when the player is found.</p>
             <small>If the queue is too large, please consider <a href="/donate">donating</a> to speed it up.</small>
 
