--- a/cmd/frontend/templates/player_missing.gohtml
+++ b/cmd/frontend/templates/player_missing.gohtml
@@ -15,22 +15,20 @@
 
         <div class="card">
             <div class="card-body">
-                <div class="tab-content">
 
                     {{ if eq .Env "local" }}
                         <div class="alert alert-primary" role="alert">Showing production queues</div>
                     {{ end }}
 
-                    <div data-queue="Players" class="mb-2">
-                        <h5>Player Queue</h5>
-                        <div id="profiles"><i class="fas fa-spinner fa-spin fa-fw"></i></div>
+                    <h5>Player Queue</h5>
+                    <div data-queue="Players" id="Players">
+                        <i class="fas fa-spinner fa-spin fa-fw"></i>
                     </div>
 
-                    <div class="progress" style="height: 20px;">
+                    <div class="progress mt-4" style="height: 20px;">
                         <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"></div>
                     </div>
 
-                </div>
             </div>
         </div>
 
